# Win32_PE_Resources

./: README.md
examples/: CMakeLists.txt  copy_resources.cpp  enumerate_resources.cpp  load_resources.cpp  load_string_resource.cpp  update_resources.cpp
lib/: resource_lib.hpp  util.hpp
